fix: allow sidebar text to stretch

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ p {
     margin-bottom: 1rem;
     text-align: center;
     color: white;
+    width: auto;
 }
 
 .sidebar p a:link {
